--- a/styles/variables.less
+++ b/styles/variables.less
@@ -827,3 +827,22 @@
 
 //** Horizontal offset for forms and lists.
 @component-offset-horizontal: 180px;
+
+
+
+//Start my customs variables
+
+
+@header-bg-color : #A6A6A6 ;
+
+html,body,.contentWrapper{
+  height: 100%;
+  width: 100%;
+}
+
+header{
+  font: 2em;
+}
+#navigation{
+  text-align: center;
+}
